styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital@0;1&display=swap');

:root {
    --primary-color: #000000;
    --secondary-color: #f6f6f6;
    --terciary-color: #22d4fd;
    --hover-color: #272727;
    --primary-font: 'Krona One', sans-serif;
    --secondary-font: 'Montserrat', sans-serif;
}

body {
    background-color: var(--primary-color);
    color: #f6f6f6;
    /* height: 100VH; */
    box-sizing: border-box;
}
strong{
    color: var(--terciary-color);
}
* {
    margin: 0;
    padding: 0;
}
.presentation {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding:5% 15%;
    gap: 82px;
}
.presentation-content {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 40px;
}
.presentation-title {
    font-size: 2.25rem;
    font-family: var(--primary-font);
    font-weight: 100;
}
.presentation-text {
    font-size: 1.5rem;
    font-family: var(--secondary-font);
}
.presentation-subtitle {
    font-family: var(--primary-font);
    font-weight: 400;   
    font-size: 1.5rem;
}
.presentation-links {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
    gap: 32px;
}
.btn {
    display: flex;
    justify-content: center;
    gap: 16px;
    width: 50%;
    text-align: center;
    border-radius: 8px;
    font-size: 1.5rem;
    padding: 21.5px 0;
    border: 2px solid var(--terciary-color);
    font-weight: 600;
    text-decoration: none;
    color: #F6F6F6;
    font-family: var(--secondary-font);
}
.btn:hover {
    background-color: var(--hover-color);
    width: 390px;
    padding-top: 25px;
    padding-bottom: 25px;
    transition: 0.3s;
}
.presentation-image {
    width: 50%;
}
.footer {
    padding: 24px;
    color: var(--primary-color);
    background-color: var(--terciary-color);
    text-align: center;
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 400;
}
.header {
    padding: 2% 0% 0% 15%;
}
.nav {
    display: flex;
    gap: 80px;
}
.nav-link {
    text-decoration: none;
    color: var(--terciary-color);
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 600;
}

@media (max-width: 1200px) {
    .header {
        padding: 10%;
    }
    .nav {
        justify-content: center;
    }
    .presentation {
        flex-direction: column-reverse;
        padding: 5%;
    }
    .presentation-content {
        width: auto;
    }
}

